--- a/src/app/product/product.component.css
+++ b/src/app/product/product.component.css
@@ -1,3 +1,9 @@
 .productCompleted {
   text-decoration: line-through;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
+
