--- a/src/app/main/app.component.css
+++ b/src/app/main/app.component.css
@@ -1,34 +1,13 @@
-.container {
+
+.productLists {
   width: 500px;
   max-width: 100%;
-  margin: 0 20px;
-  display: inline-block;
+  margin: auto;
   vertical-align: top;
 }
+.enterProductScreen {
 
-.list {
-  border: solid 1px #ccc;
-  min-height: 60px;
-  background: white;
-  border-radius: 4px;
-  display: block;
-  overflow: hidden;
 }
-
-.list-item {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  color: black;
-  font-size: 14px;
-}
-
-.list-item:last-child {
-  border: none;
-}
-
 /* Highlight the list item that is being dragged. */
 .cdk-drag-preview {
   border-radius: 4px;
