--- a/src/app/product-creator/product-creator.component.css
+++ b/src/app/product-creator/product-creator.component.css
@@ -1,16 +1,9 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-}
-
-.example-full-width {
+.full-width {
   width: 100%;
 }
 .container {
-  width: 400px;
-  max-width: 100%;
-  margin: 0 20px;
-  display: inline-block;
+  width: 500px;
+  max-width: 50%;
+  margin: 30px auto;
   vertical-align: top;
 }
